--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <section class="home-container">
-    <header>
+    <header class="header">
         <h1>W.A.B.A</h1>
         <P>write a blog about-it</P>
     </header>
