--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,10 @@
     <title>WriteAblogAboutIt</title>
 </head>
 <body>
+    <ul class="nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/login">login</a></li>        
+    </ul>
     <main>
         {{{ body }}}
     </main>
