--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,18 @@
+<div class="login-header">
+  <h2>login</h2>
+</div>
 <section class="login-form" id="login">
-    <label for="name">
-        <input type="text" id="name">
-    </label>
-
+  <form id="form-submit">
+    <div class="container">
+      <label for="name">enter your name</label>
+      <input type="text" id="name" />
+    </div>  
+    <div class="container">
+      <label for="password">enter your password</label>
+      <input type="password" id="password" />
+    </div>
+    <button id="logingBtn">submit</button>
+  </form>  
 </section>
+
+<script src="/js/login.js"></script>
