--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ body{
     margin:0;
     padding:0;
     box-sizing: border-box;
+    background-color: rgb(50, 50, 50);
 }
 
 .nav{
@@ -40,7 +41,7 @@ body{
 
 .card-container{
     border-radius: 5px;
-    box-shadow: 3px 3px 6px rgba(0,0,0,0.6);  
+    box-shadow: 3px 3px 6px rgba(102, 136, 146, 0.6);  
     max-width: 20rem;
     min-width: 15rem;    
 }
@@ -94,12 +95,54 @@ footer{
     color:black;
 }
 
-
-/* Media query for mobile screens */
-@media screen and (max-width: 420px) {
-    .article-cards {
-        
-    }
+.signup-header{
+    text-align: center;
 }
+
+.signup-form{
+    margin: 4rem;
+    border-radius: 8px;
+    box-shadow: 4px 4px 8px rgba(0,0,0,0.8);
+    padding: 5rem;    
+}
+
+.login-header{
+    text-align: center;
+}
+
+.login-form{
+    margin: 4rem;
+    border-radius: 8px;
+    box-shadow: 4px 4px 8px rgba(0,0,0,0.8);
+    padding: 5rem;    
+}
+
+#form-submit{
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+}
+
+.profilecontainer{
+    display: flex;
+    flex-direction: column;
+    padding: 10rem;
+}
+
+.profile-header{
+    text-align: center;
+}
+
+
+.btn-container{
+max-width: 30rem;
+min-width: 10rem;
+padding: 10rem;
+border-radius: 50%;
+background-color: blueviolet;
+}
+
 
 
