--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -11,11 +11,8 @@
 <body>
     <ul class="nav">
         <li><a href="/">Home</a></li>
-        <li><a href="/login">login</a></li>
-        {{#if logged_in}}
-        <li><a href="/dash">Profile</a></li>
-        {{/if}}        
-        <li><a href="/signup">create account</a></li>        
+        <li><a href="/dash">Profile</a></li>        
+        <li id="logoutBtn">logout</li>        
     </ul>
     <main>
         {{{ body }}}
