--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,6 +2,10 @@
     <header clas="profile-header">
         <h2>hello user</h2>
     </header>
+   {{#each profileArr as |pro|}}
+    <div>
+        <span>{{pro.name}}</span>
+    </div>
 
     <div class="btn-container">
         <button class="create-post">create</button>
