--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,7 +8,7 @@
     </div>
 
     <div class="btn-container">
-        <button class="create-post">create</button>
+        <a href="/newArt" class="create-post">create</a>
     </div>
     
 </section>
